src/test/ui/regions/regions-bounded-method-type-parameters.nll.stderr
error[E0621]: explicit lifetime required in the type of `x`
  --> $DIR/regions-bounded-method-type-parameters.rs:22:5
   |
LL | fn caller<'a>(x: &isize) {
   |                  ------ help: add explicit lifetime `'a` to the type of `x`: `&'a isize`
LL |     Foo.some_method::<&'a isize>();
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ lifetime `'a` required

error: unsatisfied lifetime constraints
  --> $DIR/regions-bounded-method-type-parameters.rs:22:5
   |
LL | fn caller<'a>(x: &isize) {
   |           -- lifetime `'a` defined here
LL |     Foo.some_method::<&'a isize>();
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ requires that `'a` must outlive `'static`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0621`.
